--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-imagemin": "^3.0.3",
+    "gulp-babel": "^6.1.2",
     "gulp-minify": "0.0.14",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
